--- a/sign_up.html
+++ b/sign_up.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html> 
 <html>
+<body>
+
+
 <Head>
 <link href="style.css" rel="stylesheet">
 </Head>
-</Head>
-<body> 
-
+ 
 <h1> Bit Academy Sign Up</h1> 
+<form action="#">
+	<script src="script.js">
+</script>
 
  <label for="name"> Wat is jouw naam? </label> 
  <br>
  <input type="text" id="name"> 
+ </br>
+ <br>
+ <input type="submit" value="submit">
 </br> 
-
+</form>
 </body>
 </html>
